--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "typescript": "^4.5.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
